--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -670,6 +670,9 @@ a.fancybox{
     .post-body h4{
         font-size: 14px;
     }
+    .post-body h5{
+        font-size: 13px;
+    }
     .posts-expand .post-tags {
         margin-top: 10px;
     }
